# hellstroms_hive

./: .gitignore  README  README.md  getsig.C~  gitlog.txt  gui.C~  makefile  makefile~  plotMV4.C~  plot_dedx.C  plot_runtmva.C  plotsupimp.C  plotsupimp.C~  runtmva.C  runtmva.C~  test.cpp  tmva.cpp  useful_info.txt  writepdfs.C  writepdfs.C~
VertexReconstruction/: CMakeLists.txt
VertexReconstruction/GeoAlgo/: CMakeLists.txt
VertexReconstruction/inc/: Analyzer.h  DetectorObjects.h  EvaluateVertexQuality.h  FillTreeVariables.h  GetPermutations.h  MCTruthAnalyzer.h  PandoraAnalyzer.h  ParticleAssociations.h  Pi0Filter.h  Processor.h  Storage.h  VRAnalyzer.h  VertexBuilder.h  VertexQuality.h
VertexReconstruction/other/: test_variables.C  test_variables_loop.C
VertexReconstruction/other/grid/: clean  job  rungrid.sh  rungrid_makeup.sh  rungrid_test.sh  submit
VertexReconstruction/src/: Analyzer.cxx  CMakeLists.txt  DetectorObjects.cxx  EvaluateVertexQuality.cxx  FillTreeVariables.cxx  GetPermutationFiles.cxx  GetPermutations.cxx  LinkDef.h  MCTruthAnalyzer.cxx  Pandora.cxx  PandoraAnalyzer.cxx  ParticleAssociations.cxx  Pi0Filter.cxx  PrintVertexQuality.cxx  Processor.cxx  RunEvaluateVertexQuality.cxx  RunInvDeltaMass.cxx  RunMCTruth.cxx  RunMerge.cxx  RunPandora.cxx  RunPi0Filter.cxx  RunVertexQuality.cxx  RunVertexReconstruction.cxx  Storage.cxx  VRAnalyzer.cxx  VertexBuilder.cxx  VertexQuality.cxx  VertexReconstruction.cxx
deltaRad/: CMakeLists.txt  README
deltaRad/bnbcorrection/: README
deltaRad/inc/: TruncMean.h  app.h  bdt_app.h  bdt_boxcut.h  bdt_contourcut.h  bdt_cuts.h  bdt_datamc.h  bdt_eff.h  bdt_file.h  bdt_flow.h  bdt_info.h  bdt_precalc.h  bdt_recomc.h  bdt_response.h  bdt_scatter.h  bdt_sig.h  bdt_spec.h  bdt_test.h  bdt_train.h  bdt_var.h  bdt_varplot.h  data_mc.h  data_mc_testing_suite.h  division.h  efficiency.h  gen_tlimits.h  get_mva_response_hists.h  get_pot_info.h  load_mva_param.h  load_trees.h  merge.h  method_struct.h  ncgamma_xsec.h  plot_mva_response_hists.h  plotstack.h  significance.h  train.h  variable_list.h  void_vec.h
deltaRad/other/: app_tree_struct.hpp  get_efficiency.C  getplots.sh  plotsupimp.C  run.sh  run_hh.sh
deltaRad/other/1e1p_script/: box_cut.sh  contour_cut.sh
deltaRad/src/: CMakeLists.txt  TruncMean.cxx  app.cxx  bdt_app.cxx  bdt_boxcut.cxx  bdt_contourcut.cxx  bdt_datamc.cxx  bdt_eff.cxx  bdt_file.cxx  bdt_file_pi0.cxx  bdt_precalc.cxx  bdt_recomc.cxx  bdt_response.cxx  bdt_scatter.cxx  bdt_sig.cxx  bdt_spec.cxx  bdt_test.cxx  bdt_train.cxx  bdt_varplot.cxx  bdt_vertex_eff.cxx  data_mc_compare.cxx  deltaRad.cxx  deltaRad_binning.cxx  deltaRad_cosmics.cxx  deltaRad_electron.cxx  deltaRad_legacy.cxx  deltaRad_modified.cxx  deltaRad_pi0.cxx  deltaRad_pi0_new.cxx  deltaRad_template.cxx  det_validate.cxx  eLEE.cxx  efficiency.cxx  gLEE.cxx  gen_tlimits.cxx  get_mva_response_hists.cxx  get_pot_info.cxx  get_vertices_per_event.cxx  invarTest.cxx  load_mva_param.cxx  (+17 more)
deltaRad/src/energy_calibration_script/: FitLandauGauss.C  LandauGaussian.h  langausFit.cc
deltaRad/src/kinematic_comp_script/: kinematic_comp.cc
deltaRad/src/obsol/: CMakeLists.txt  deltaRad_cosmics.cxx
deltaRad/src/validates/: validate.cxx  validate_trk.cxx
deltaRad/xgboost/: CMakeLists.txt
deltaRad/xml/: 1g1p_3_20_19.xml  1g1p_3_21_19.xml  box_copy.xml  default.xml  default_bnb.xml  pi0_box_copy.xml  pi0_box_copy_2g0p.xml  pi0_box_copy_apr2019.xml  var_list
deltaRad/xml/1e1p_xmls/: 1e1p_06_28_19.xml  box_copy.xml  temp.xml
deltaRad/xml/1g0p_xmls/: 1g0p_4_22_19.xml  1g0p_4_2_19.xml  1g0p_7_10_19_DPF.xml  1g0p_7_16_19_osc.xml  1g0p_7_23_19_collab.xml
deltaRad/xml/1g1p_xmls/: 1g1p_3_21_19.xml  1g1p_3_29_19.xml  1g1p_3_29_19_v2.xml  1g1p_4_22_19.xml  1g1p_6_17_19_v13.xml  1g1p_6_17_19_v13_zcuts.xml  1g1p_6_17_19_v13_zover500.xml  1g1p_6_17_19_v13_zunder500.xml  1g1p_6_3_19.xml  1g1p_7_10_19_DPF.xml  1g1p_7_16_19_osc.xml  1g1p_7_23_19_collab.xml  1g1p_7_24_19_collab.xml  (+3 more)
hive/: CMakeLists.txt  README  get_files_from_run_subrun_list.sh  gpvm_setup.sh
hive/inc/: bdt_app.h  bdt_covar.h  bdt_datamc.h  bdt_eff.h  bdt_file.h  bdt_flow.h  bdt_info.h  bdt_precalc.h  bdt_recomc.h  bdt_scatter.h  bdt_sig.h  bdt_spec.h  bdt_train.h  bdt_var.h  bdt_varplot.h  bdt_vertex_eff.h  denan.h  duplicate_suite_2022.h  flat_var.h  global_func.h  hippo.h  load_mva_param.h  method_struct.h  void_vec.h
hive/other/: PerfectProducer.c  SplitSBNcovar.c  add_covar.c  make_arborist_from_sbnfit.c  plot_bdt_variables.hpp  run.sh  run1g0p_CoherentTrain.sh  run1g0p_CombinedEpochs.sh  run1g0p_DetSysPlots_Feb2021.sh  run1g0p_Farsidebands.sh  run1g0p_Farsidebands_Feb2021.sh  run1g0p_Farsidebands_Run2Run_Feb2021.sh  run1g0p_FinalSignalRegion_June2021.sh  run1g0p_technote_1_27_21.sh  run1g0p_technote_2_15_21_Run1.sh  run1g0p_technote_2_16_21_Run3.sh  run1g1p_CombinedEpochs.sh  run1g1p_DetSysPlots_Feb2021.sh  run1g1p_Fake8.sh  run1g1p_Farsidebands.sh  run1g1p_Farsidebands_Feb2021.sh  run1g1p_Farsidebands_Run2Run_Feb2021.sh  run1g1p_FinalSelection.sh  run1g1p_Nearsidebands_Feb2021.sh  run1g1p_technote_1_27_21.sh  run1g1p_technote_2_15_21_Run1.sh  run1g1p_technote_2_16_21_Run3.sh  run2g0p_Feb2021.sh  run2g1p_Feb2021.sh  runMultiRunChecks_withAutoError.sh  run_hh.sh
hive/root_linkdefs/: CMakeLists.txt  denan_LinkDef.h
hive/src/: CMakeLists.txt  bdt_app.cxx  bdt_boxcut.cxx  bdt_covar.cxx  bdt_datamc.cxx  bdt_eff.cxx  bdt_file.cxx  bdt_flow.cxx  bdt_precalc.cxx  bdt_recomc.cxx  bdt_scatter.cxx  bdt_sig.cxx  bdt_spec.cxx  bdt_test.cxx  bdt_train.cxx  bdt_var.cxx  bdt_varplot.cxx  bdt_vertex_eff.cxx  global_func.cxx  hive.cxx  load_mva_param.cxx  nwo_gLEE.cxx  validate_hive.cxx
hive/xgboost/: CMakeLists.txt
hive/xml/: BlueWorldOrder_v19_MCC9.1.xml  BluwWorldOrder_Example.xml
sbnfit_usage/src/: CMakeLists.txt  delta_bounds.cxx  delta_bounds_fit.cxx  pot_scaling.cxx
tmva_piecewise/src/: CMakeLists.txt  DeltaRad.cxx  get_mva_response_hists.cxx  get_vertices_per_event.cxx  plot_mva_response_hists.cxx  significance.cxx
track_dEdx/: CMakeLists.txt  README  trk_dEdx.c  trk_dEdx.cxx
(+695 files in other folders)
